--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bartlomiej Waliszko",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
